//
//  AccesibilityIds.swift
//  meli assesment
//
//  Created by Sergio Gelves on 12/04/21.
//

struct AccesibilityIds {

    struct ProductCell {

        static var cell = "Celda del producto"
        static var image = "Imagen del producto en la celda "
        static var title = "Título del producto en la celda "
        static var discount = "Descuento del producto en la celda "
        static var shipping = "Envío del producto en la celda "
        static var price = "Precio del producto en la celda "
    }

    struct ProductDetail {

        static var image = "Imagen del detalle del producto"
        static var title = "Título del detalle del producto"
        static var discount = "Descuento del detalle del producto"
        static var shipping = "Envío del detalle del producto"
        static var price = "Precio del detalle del producto"
        static var detail = "Detalle del producto"
    }
}
